[gd_scene load_steps=4 format=3 uid="uid://cktcp0tn57fmv"]

[ext_resource type="Script" path="res://Scenes/AuthenticationWindow/AuthenticationWindow.gd" id="1_vr4io"]
[ext_resource type="Theme" uid="uid://c4thhsansla1v" path="res://Scenes/AuthenticationWindow/custom_theme.tres" id="2_4hyj4"]
[ext_resource type="Script" path="res://Scenes/AuthenticationWindow/EmailFocus.gd" id="3_sqle3"]

[node name="AuthenticationWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vr4io")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 160.0
offset_top = 168.0
offset_right = 389.0
offset_bottom = 285.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="email" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4hyj4")
theme_override_font_sizes/font_size = 64
text = "gooddmitriy@mail.ru"
expand_to_text_length = true
caret_blink = true
script = ExtResource("3_sqle3")

[node name="password" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4hyj4")
theme_override_font_sizes/font_size = 64
text = "1234"
caret_blink = true

[node name="Log in" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Log in"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "<"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_up" from="MarginContainer/VBoxContainer/Log in" to="." method="_on_log_in_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
